Headline background bug fixed
Fixed the bug in headline background: background was too low.

--- a/index.css
+++ b/index.css
@@ -133,7 +133,7 @@ div > span {
   background-image: url("Icons/background-shapes.png");
   background-repeat: no-repeat;
   background-position: right;
-  background-position-y: 300px;
+  background-position-y: 220px;
 }
 
 a {
